--- a/trunk/index.html
+++ b/trunk/index.html
@@ -768,8 +768,8 @@
            </tr>
 		   <tr>
             <td align="center" class="imgtb"><a href="brand.php?id=14"><a href="#"><img src="index-image/college-image/logo_iyu.gif" width="250" height="48" border="0" /></a></td>
-            <td align="center" class="imgtb"><a href="brand.php?id=15"><img src="index-image/college-image/logo_bjwlxy.gif" width="250" height="48" border="0" /></a></td>
-            <td align="center" class="imgtb"><a href="brand.php?id=11"><img src="index-image/college-image/logo_bcu.gif" width="250" height="48" border="0" /></a></td>
+            <td align="center" class="imgtb"><a href="brand.php?id=20"><img src="index-image/college-image/logo_bjwlxy.gif" width="250" height="48" border="0" /></a></td>
+            <td align="center" class="imgtb"><a href="brand.php?id=15"><img src="index-image/college-image/logo_bcu.gif" width="250" height="48" border="0" /></a></td>
            </tr>
 		   <tr>
             <td class="wz" align="center"><a href="brand.php?id=14">北京国际青年研修学院</a></td>            
@@ -796,7 +796,7 @@
           <tr>
             <td width="33%" class="imgtb"><a href="brand.php?id=21"><img src="index-image/college-image/logo_beiwen.gif" width="250" height="48" border="0" /></a></td>
             <td width="33%" class="imgtb"><a href="brand.php?id=11"><img src="index-image/college-image/logo_best.gif" width="250" height="48" border="0" /></a></td>
-            <td width="33%" class="imgtb"><a href="brand.php"><img src="index-image/college-image/logo_ielts.gif" width="250" height="48" border="0" /></a></td>
+            <td width="33%" class="imgtb"><a href="brand.php?id=3"><img src="index-image/college-image/logo_ielts.gif" width="250" height="48" border="0" /></a></td>
           </tr>		  
 		  <tr>
             <td width="33%" class="imgtb"><a href="brand.php?id=8"><img src="index-image/college-image/jiuzhou_sifa.gif" width="250" height="48" border="0" /></a></td>
