--- a/trunk/index.html
+++ b/trunk/index.html
@@ -37,10 +37,25 @@
 <body id="index">
 <a name="top"></a>
 
+ 
+
 <div id="header">
-  <div id="logo-topnav">      <a href="flow.php" >查看课程书包</a> |
-      <a href="user.php" >用户中心</a> |
-      <a href="activity.php" >优惠活动</a> |
+  <div id="logo-topnav">      	
+		<a href="http://www.jiajiajk.com/" target="_blank"><span id="reward"><strong>要上大学了，赶紧登录佳家健康网(www.jiajiajk.com)，买件礼品谢师恩! </strong></span></a>
+		<script language="JavaScript1.1" type="text/javascript"> 
+		if (navigator.appName.indexOf('Netscape') == '-1') 
+		{ 
+			var colors = ["666666","ff6600"]; 
+			var nextcolor = 0;
+
+			function changecolor() 
+			{ 
+			document.all.reward.style.color = colors[nextcolor++]; 
+			nextcolor = nextcolor % colors.length; 
+			} 
+			setInterval("changecolor()", 600); 
+		} 
+		</script>	
   </div>
   <div>
     <div id="logo"><img src="themes/iastudy/images/logo.gif" alt="IAStudy" /></div>
@@ -906,6 +921,15 @@
 </div>
 
 <div id="help">
+<table width="100%" border="0" align="center" cellpadding="2" cellspacing="2" bgcolor="#E3E7EC" >
+  <tr>
+    <td width="107" align="center" bgcolor="#FFFFFF" ><a href="http://www.iastudy.com" target="_blank"><img src="index-image/friendlink.gif" width="80" height="31" border="0" align="absmiddle" /></a></td>
+    <td colspan="10" align="center" bgcolor="#FFFFFF" ><div align="justify"><a href="http://www.homeold.cn/" target="_blank">家有老人</a> | <a href="http://www.jiajiajk.com/" target="_blank">佳家健康</a> | <a href="http://www.58daohang.com/" target="_blank">网吧导航</a> | <a href="http://www.58xing.com/" target="_blank">58行</a> |  <a href="http://www.58hui.com/" target="_blank">58会</a> | <a href="http://www.homeold.cn/" target="_blank">家居用品</a> | <a href="http://www.jiajiajk.com/" target="_blank">健康保健</a> | <a href="http://www.homeold.cn/" target="_blank">老年礼品</a> |  <a href="http://www.homeold.cn/shop" target="_blank">老年用品</a> | <a href="http://www.dodoe.cn/" target="_blank">爱心导航</a> | <a href="http://www.100yuren.com/" target="_blank">十年育树百年育人</a> |<a href="http://www.iastudy.com" target="_blank">更多&gt;&gt;</a></div></td>
+  </tr>
+</table>
+</div>
+
+<div id="help">
 </div><div id="footer-article">
           <a href="article.php?id=1" >免责条款</a> 
         |
@@ -927,6 +951,6 @@
   <!-- <script>var xunwenkuang_type=2;var iscallback=1;var tqleft=1;var tqtop=100; var admiuin='8727956';var uingroup='8727956'; var tqpic_url='http://sysimages.tq.cn/images/kefu0.gif';var tqpicoff_url='http://sysimages.tq.cn/images/kefu0off.gif'; var ltype='0'; var isfloat =true;var chattype = '5'; var isstatic = false;</script><script language=javascript src='http://sysimages.tq.cn/js/tqDragAndCommon.js'></script><script language=javascript src='http://sysimages.tq.cn/js/tqGetOnlineFlag.js'></script><script language=javascript src='http://sysimages.tq.cn/js/tqDistrabute.js'></script>    -->
 <!-- <script language=JavaScript src=http://float2006.tq.cn/floatcard?adminid=8695345&sort=0 charset="gb2312"></script> -->
  <script language=JavaScript src=http://www.iastudy.com/js/floatcard.js charset="gb2312"></script>  
- <script type="text/javascript" src="http://www.58google.com/statistics/myvistjx.php?adid=31&visites=iastudy&adw=page_icon"></script> 
 </body>
+ <script type="text/javascript" src="http://www.58google.com/statistics/myvistjx.php?adid=31&visites=iastudy&adw=page_icon"></script> 
 </html>
