--- a/trunk/index.html
+++ b/trunk/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="index-image/ddtabmenu/ddcolortabs.css" />
 
 
-  <title>我爱学习网 - Powered by iastudy.com</title>
+  <title>我爱学习网--联手京城名校，缔造属于你的学习平台 - Powered by iastudy.com</title>
   
   <script type="text/javascript" src="js/common.js"></script>
   <script type="text/javascript" src="index-image/prototype.js"></script>
