--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     <div id="logo"><img src="themes/iastudy/images/logo.gif" alt="IAStudy" /></div>
     <div id="top_nav">
       <ul>
-		<li class="current"><a href="index.html"><span>首页</span></a></li>
+		<li class="current"><a href="index.html"><span>首页</span></a></li>	
         <li><a href="category.php?id=15" ><span>高校招生</span></a></li>
         <li><a href="category.php?id=355" ><span>计算机(IT)</span></a></li>
         <li><a href="category.php?id=357" ><span>外语</span></a></li>
         <li><a href="category.php?id=356" ><span>艺术/设计</span></a></li>
         <li><a href="category.php?id=360" ><span>管理</span></a></li>
         <li><a href="category.php?id=354" ><span>经济/金融</span></a></li>
-        <li><a href="category.php?id=359" ><span>建筑</span></a></li>
-		<li><a href="category.php?id=7" ><span>出国/留学</span></a></li>
+        <li><a href="category.php?id=7" ><span>出国</span></a></li>
+        <li><a href="category.php?id=6" ><span>专业培训</span></a></li>		
       </ul>
     </div>
   </div>
