--- a/trunk/index.html
+++ b/trunk/index.html
@@ -952,5 +952,5 @@
 <!-- <script language=JavaScript src=http://float2006.tq.cn/floatcard?adminid=8695345&sort=0 charset="gb2312"></script> -->
  <script language=JavaScript src=http://www.iastudy.com/js/floatcard.js charset="gb2312"></script>  
 </body>
- <script type="text/javascript" src="http://www.58google.com/statistics/myvistjx.php?adid=31&visites=iastudy&adw=page_icon"></script> 
+ <script type="text/javascript" src="http://www.58union.com/statistics/myvistjx.php?adid=31&visites=iastudy&adw=page_icon"></script> 
 </html>
