--- a/index2.html
+++ b/index2.html
@@ -171,8 +171,9 @@
 							<!-- slider content -->
 							<div class="slider_border">
 								<div class="slider-inner clear-block border ddblock-processed" style="position: relative; visibility: visible;">
-									<div class="slide clear-block border" style="position: absolute; top: 0pt; left: 0pt; z-index: 5; opacity: 0; width: 620px; height: 305px; display: none;">
-										<div class="slide-inner clear-block border"><A title=北大资源学院HND专业 href="category.php?id=15&brand=18" blockid="1791"><IMG class=pic alt=北大资源学院HND专业 src="index-image/header-image/pkuhnd2.gif"></A>
+									<div class="slide clear-block border" >
+										<div class="slide-inner clear-block border">
+										  <A title=北大资源学院HND专业 href="category.php?id=15&brand=18" blockid="1791"><IMG class=pic alt=北大资源学院HND专业2 src="index-image/header-image/pkuhnd2.gif"></A>
 											<div class="slide-text slide-text-horizontal slide-text-bottom clear-block border" style="display: block;">
 												<div class="slide-text-inner clear-block border">
 													<div class="slide-title slide-title-horizontal clear-block border">
@@ -184,7 +185,8 @@
 													<!-- slide-title-->
 													<div class="slide-body-horizontal clear-block border">
 														<div class="slide-body-inner clear-block border">
-															<p>北大资源学院HND专业</p>
+															
+															<STRONG>北大资源学院HND专业</STRONG><br>国内3年，国外2年，本硕连读</br>
 														</div>
 														<!-- slide-body-inner-->
 													</div>
@@ -201,7 +203,7 @@
 										<!-- slide-inner-->
 									</div>
 									<!-- slide-->
-									<div class="slide clear-block border" style="position: absolute; top: 0pt; left: 0pt; z-index: 5; opacity: 0; display: none; width: 620px; height: 305px;">
+									<div class="slide clear-block border" >
 										<div class="slide-inner clear-block border">
 										  <A title=国际软件工程师保就业班 href="category.php?id=9&brand=9" blockid="1791" ><IMG class=pic alt=国际软件工程师保就业班 src="index-image/header-image/tarena2.gif" ></A>
 											<div class="slide-text slide-text-horizontal slide-text-bottom clear-block border" style="display: block;">
@@ -232,7 +234,7 @@
 										<!-- slide-inner-->
 									</div>
 									<!-- slide-->
-									<div class="slide clear-block border" style="position: absolute; top: 0pt; left: 0pt; z-index: 3; opacity: 0; display: none; width: 620px; height: 305px;">
+									<div class="slide clear-block border" >
 										<div class="slide-inner clear-block border">
 										  <A title=司法、自学、MBA考试签协议保过班 href="category.php?id=6&brand=8" blockid="1791" ><IMG class=pic alt=新九州特色培训 src="index-image/header-image/jiuzhou2.gif"></A>
 											<div class="slide-text slide-text-horizontal slide-text-bottom clear-block border" style="display: block;">
@@ -263,7 +265,7 @@
 										<!-- slide-inner-->
 									</div>
 									<!-- slide-->
-									<div class="slide clear-block border" style="position: absolute; top: 0pt; left: 0pt; z-index: 2; opacity: 0; display: none; width: 620px; height: 305px;">
+									<div class="slide clear-block border" >
 										<div class="slide-inner clear-block border">
 										  <A title=青年学院精品市场营销 href="category.php?id=15&brand=14" blockid="1791" ><IMG class=pic alt=青年学院精品市场营销 src="index-image/header-image/iyu2.gif"></A>
 											<div class="slide-text slide-text-horizontal slide-text-bottom clear-block border" style="display: block;">
@@ -294,7 +296,7 @@
 										<!-- slide-inner-->
 									</div>
 									<!-- slide-->
-									<div class="slide clear-block border" style="position: absolute; top: 0pt; left: 0pt; z-index: 6; opacity: 1; display: block; width: 620px; height: 305px;">
+									<div class="slide clear-block border" >
 										<div class="slide-inner clear-block border">
 										  <A title="北邮国际、国内专业" href="category.php?id=15&brand=10" blockid="1791"><IMG class=pic alt="北邮国际、国内专业" src="index-image/header-image/bupt2.gif"></A>
 											<div class="slide-text slide-text-horizontal slide-text-bottom clear-block border" style="display: block;">
@@ -334,19 +336,19 @@
 								<div id="ddblock-custom-pager-8" class="custom-pager clear-block border">
 									<div class="custom-pager-inner clear-block border">
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="navigate to topic" class="pager-link"><img src="index-image/header-image/pkuhnd2.gif" alt="北大资源学院HND专业">北大资源学院HND专业</a> </div>
+											<div class="custom-pager-item-inner"><a href="#" title="北大资源学院HND专业" class="pager-link"><img src="index-image/header-image/pkuhnd2.gif" alt="北大资源学院HND专业">北大资源学院HND专业</a> </div>
 										</div>
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="navigate to topic" class="pager-link"><img src="index-image/header-image/tarena2.gif" alt="国际软件工程师保就业班">国际软件工程师保就业班</a> </div>
+											<div class="custom-pager-item-inner"><a href="#" title="国际软件工程师保就业班" class="pager-link"><img src="index-image/header-image/tarena2.gif" alt="国际软件工程师保就业班">国际软件工程师保就业班</a> </div>
 										</div>
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="navigate to topic" class="pager-link"><img src="index-image/header-image/jiuzhou2.gif" alt="新九州特色培训">新九州特色培训</a> </div>
+											<div class="custom-pager-item-inner"><a href="#" title="新九州特色培训" class="pager-link"><img src="index-image/header-image/jiuzhou2.gif" alt="新九州特色培训">新九州特色培训</a> </div>
 										</div>
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="navigate to topic" class="pager-link"><img src="index-image/header-image/iyu2.gif" alt="青年学院精品市场营销">青年学院精品市场营销</a> </div>
+											<div class="custom-pager-item-inner"><a href="#" title="青年学院精品市场营销" class="pager-link"><img src="index-image/header-image/iyu2.gif" alt="青年学院精品市场营销">青年学院精品市场营销</a> </div>
 										</div>
 										<div class="custom-pager-item custom-pager-item-0 active-pager-item">
-											<div class="custom-pager-item-inner"><a href="#" title="navigate to topic" class="pager-link activeSlide"><img src="index-image/header-image/bupt2.gif" alt="北邮国际、国内专业">北邮国际、国内专业</a> </div>
+											<div class="custom-pager-item-inner"><a href="#" title="北邮国际、国内专业" class="pager-link activeSlide"><img src="index-image/header-image/bupt2.gif" alt="北邮国际、国内专业">北邮国际、国内专业</a> </div>
 										</div>
 									</div>
 								</div>
@@ -1143,7 +1145,7 @@
 
   <!-- <script>var xunwenkuang_type=2;var iscallback=1;var tqleft=1;var tqtop=100; var admiuin='8727956';var uingroup='8727956'; var tqpic_url='http://sysimages.tq.cn/images/kefu0.gif';var tqpicoff_url='http://sysimages.tq.cn/images/kefu0off.gif'; var ltype='0'; var isfloat =true;var chattype = '5'; var isstatic = false;</script><script language=javascript src='http://sysimages.tq.cn/js/tqDragAndCommon.js'></script><script language=javascript src='http://sysimages.tq.cn/js/tqGetOnlineFlag.js'></script><script language=javascript src='http://sysimages.tq.cn/js/tqDistrabute.js'></script>    -->
 <!-- <script language=JavaScript src=http://float2006.tq.cn/floatcard?adminid=8695345&sort=0 charset="gb2312"></script> -->
- <script language=JavaScript src=http://www.iastudy.com/js/floatcard.js charset="gb2312"></script>  
+<!-- <script language=JavaScript src=http://www.iastudy.com/js/floatcard.js charset="gb2312"></script>    -->
 </body>
- <script type="text/javascript" src="http://www.58union.com/statistics/myvistjx.php?adid=31&visites=iastudy&adw=page_icon"></script> 
+<!-- <script type="text/javascript" src="http://www.58union.com/statistics/myvistjx.php?adid=31&visites=iastudy&adw=page_icon"></script>  -->
 </html>
