--- a/index2.html
+++ b/index2.html
@@ -185,8 +185,7 @@
 													<!-- slide-title-->
 													<div class="slide-body-horizontal clear-block border">
 														<div class="slide-body-inner clear-block border">
-															
-															<STRONG>北大资源学院HND专业</STRONG><br>国内3年，国外2年，本硕连读</br>
+															<STRONG>北大资源学院HND专业</STRONG>国内3年，国外2年，本硕连读
 														</div>
 														<!-- slide-body-inner-->
 													</div>
@@ -310,7 +309,7 @@
 													<!-- slide-title-->
 													<div class="slide-body-horizontal clear-block border">
 														<div class="slide-body-inner clear-block border">
-															<p>北邮国际、国内专业</p>
+															<p><STRONG>北邮国际、国内专业</STRONG>就读国内名校，国际、国内专业任选</p>
 														</div>
 														<!-- slide-body-inner-->
 													</div>
@@ -336,19 +335,19 @@
 								<div id="ddblock-custom-pager-8" class="custom-pager clear-block border">
 									<div class="custom-pager-inner clear-block border">
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="北大资源学院HND专业" class="pager-link"><img src="index-image/header-image/pkuhnd2.gif" alt="北大资源学院HND专业">北大资源学院HND专业</a> </div>
+											<div class="custom-pager-item-inner"><a href="category.php?id=15&brand=18" title="北大资源学院HND专业" class="pager-link activeSlide"><STRONG>北大资源学院HND专业</STRONG><p>国内3年，国外2年，本硕连读</p></a> </div>
 										</div>
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="国际软件工程师保就业班" class="pager-link"><img src="index-image/header-image/tarena2.gif" alt="国际软件工程师保就业班">国际软件工程师保就业班</a> </div>
+											<div class="custom-pager-item-inner"><a href="category.php?id=9&brand=9" title="国际软件工程师保就业班" class="pager-link"><STRONG>国际软件工程师保就业班</STRONG><p>培养IT精英，就业国际名企</p></a> </div> <!-- <img src="index-image/header-image/tarena2.gif" alt="国际软件工程师保就业班"> -->
 										</div>
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="新九州特色培训" class="pager-link"><img src="index-image/header-image/jiuzhou2.gif" alt="新九州特色培训">新九州特色培训</a> </div>
+											<div class="custom-pager-item-inner"><a href="category.php?id=6&brand=8" title="新九州特色培训" class="pager-link"><STRONG>新九州特色培训</STRONG><p>司法、自学、MBA考试签协议保过班</p></a> </div> <!-- <img src="index-image/header-image/jiuzhou2.gif" alt="新九州特色培训"> -->
 										</div>
 										<div class="custom-pager-item custom-pager-item-0">
-											<div class="custom-pager-item-inner"><a href="#" title="青年学院精品市场营销" class="pager-link"><img src="index-image/header-image/iyu2.gif" alt="青年学院精品市场营销">青年学院精品市场营销</a> </div>
+											<div class="custom-pager-item-inner"><a href="category.php?id=15&brand=14" title="青年学院精品市场营销" class="pager-link"><STRONG>青年学院精品市场营销</STRONG><p>国内学习3年，德国实习1年</p></a> </div> <!-- <img src="index-image/header-image/iyu2.gif" alt="青年学院精品市场营销"> -->
 										</div>
 										<div class="custom-pager-item custom-pager-item-0 active-pager-item">
-											<div class="custom-pager-item-inner"><a href="#" title="北邮国际、国内专业" class="pager-link activeSlide"><img src="index-image/header-image/bupt2.gif" alt="北邮国际、国内专业">北邮国际、国内专业</a> </div>
+											<div class="custom-pager-item-inner"><a href="category.php?id=15&brand=10" title="北邮国际、国内专业" class="pager-link"><STRONG>北邮国际、国内专业</STRONG><p>就读国内名校，国际、国内专业任选</p></a> </div> <!-- <img src="index-image/header-image/bupt2.gif" alt="北邮国际、国内专业"> -->
 										</div>
 									</div>
 								</div>
