--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
   <script language="JavaScript1.1" type="text/javascript"> 
 		if (navigator.appName.indexOf('Netscape') == '-1') 
 		{ 
-			var colors = "666666","ff6600"; 
+			var colors = ["666666","ff6600"]; 
 			var nextcolor = 0;
 
 			function changecolor() 
 			{ 
-			document.all.reward.style.color = colorsnextcolor++; 
+			document.all.reward.style.color = colors[nextcolor++]; 
 			nextcolor = nextcolor % colors.length; 
 			} 
 			setInterval("changecolor()", 600); 
-		} 
+		}		
 		</script>
 </div>
 <div  id="head">
   <div id="logos"><img src="imgs/logo.gif"  alt="我爱学习网"></div>
   <div id="h_r">
   <span style="float:right; margin-right:5px;"><a href="http://www.58daohang.com/Venture.html" target="_blank"><img src="imgs/cy.gif"  alt="" height="80" width="120" border="0"></a> </span>
-  <span> <a href="http://www.iastudy.com/goods.php?id=437" target="_blank"><img src="imgs/58x.gif"  alt="" height="80" width="657" border="0"></a> </span></div>
+  <span> <a href="http://www.iastudy.com/iastudy/goods.php?id=437" target="_blank"><img src="imgs/58x.gif"  alt="" height="80" width="657" border="0"></a> </span></div>
 </div>
 <div id="dh">
  <div class="daohang">
