--- a/trunk/index.html
+++ b/trunk/index.html
@@ -424,7 +424,7 @@
     </ul>
   </div>
 </div>
-<div id="zixun"><b>网上报名及课程咨询与服务热线：010-69799625</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="tencent://message/?uin=1171196009&Site=www.iastudy.com&Menu=yes" target="_blank" ><img src="imgs/qq.jpg" width="69" height="17" border=0 align="absmiddle"></a> </div>
+<div id="zixun"><b>网上报名及课程咨询与服务热线：010-82608626   15110263446   13810602270</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="tencent://message/?uin=1171196009&Site=www.iastudy.com&Menu=yes" target="_blank" ><img src="imgs/qq.jpg" width="69" height="17" border=0 align="absmiddle"></a> </div>
 <div id="foot_t">
   <ul>
     <li><span style="color:#FE5301"> <b>咨询更专业</b></span> <br>
@@ -470,9 +470,9 @@
     <li><a href="article.php?id=5" target="_blank" >公司简介</a></li>
   </ul>
 </div>
-<div id="footer">Copyright © 2005-2009 我爱学习网 版权所有，并保留所有权利。<br>
+<div id="footer">Copyright © 2005-2010 我爱学习网 版权所有，并保留所有权利。<br>
   <br>
-  Tel: 010-69799625 <img src="imgs/msn.gif" width="18" height="17" border="0" alt="MSN" /> iastudy@hotmail.com <img src="http://mystatus.skype.com/smallclassic/iastudy" alt="Skype" /><a href="skype:iastudy?call">iastudy</a><br>
+  Tel: 010-82608626 <img src="imgs/msn.gif" width="18" height="17" border="0" alt="MSN" /> iastudy@hotmail.com <img src="http://mystatus.skype.com/smallclassic/iastudy" alt="Skype" /><a href="skype:iastudy?call">iastudy</a><br>
   <br>
 ICP备案证书号:<a href="http://www.miibeian.gov.cn/" target="_blank">09060519</a> </div>
  <script type="text/javascript" src="imgs/MSIEPNG.js"></script>
